<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Super Secure Alarm System</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_contact">AddContactActivity</string>
    <string name="phoneInstructions">Enter a Phone Number:</string>
    <string name="phoneHint">Ex: 1231231234</string>
    <string name="emailInstructions">Enter an E-Mail:</string>
    <string name="emailHint">myEmail@foo.com</string>
    <string name="submit">add</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="remove">remove</string>


</resources>
